--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -110,8 +110,8 @@ body {
   display: none;
 }
 .cards {
-  max-width: 300px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   border-radius: 20px;
   padding: 10px;
+  margin-top: 20px;
 }
