--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -108,3 +108,9 @@ body {
   float: right;
   text-align: right;
 }
+#search input{
+  padding:10px;
+  padding-left: 20px;
+  border: 2px solid #e8e7e7;
+  border-radius: 15px !important;
+}
