--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,24 +1,15 @@
 @font-face {
-  font-family: "helveticaneue";
-  src: local("helveticaneuew01-87hvcnoblRg")
-      url("../fonts/HelveticaNeueW0187HvCnObl/helvetica_neue_w01_87_hv_cn_obl-webfont.woff")
-      format("woff"),
-    url("../fonts/HelveticaNeueW0187HvCnObl/HelveticaNeueW0187HvCnObl.ttf")
-      format("truetype"),
-    url("../fonts/HelveticaNeueW0187HvCnObl/HelveticaNeueW0187HvCnObl.otf")
-      format("opentype");
-  font-weight: normal;
-  font-style: normal;
+  font-family: "rockwen";
+  src: local("rockwen"),
+    url(../fonts/HelveticaNeueW0187HvCnObl/rockwen.ttf) format("truetype");
 }
-* {
-  font-family: "helveticaneue";  
-  /* font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
 
-  margin: 0%;
-  padding: 0%;
+* {
+  font-family: "rockwen";
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
-
 html,
 body {
   background-color: #fbfbfb;
@@ -70,22 +61,6 @@ body {
   height: 70px;
   border-radius: 5px;
 }
-.form-box {
-  max-width: 380px;
-  margin: auto;
-  padding: 50px;
-  background: transparent;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  border-radius: 10px;
-}
-.form-box1 {
-  max-width: 700px;
-  margin: auto;
-  padding: 50px;
-  background: transparent;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  border-radius: 10px;
-}
 .msg-box {
   max-width: 600px;
   margin: auto;
@@ -118,19 +93,32 @@ body {
   border-radius: 5px;
   color: #fff;
   font-size: small;
-  font-weight: 600;
   margin-top: 20px;
 }
 .cards .card-tasks {
   color: rgb(0, 0, 0);
   padding: 10px;
 }
+.cards hr.divider {
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+}
 .task-status {
   float: right;
   text-align: right;
 }
-.cards hr.divider
-{ 
-   margin-top: 0.5em;
-   margin-bottom: 0.5em;
-} 
+#masonry-effect {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+.card-item {
+  flex-direction: column;
+  margin-right: 1em;
+  margin-bottom: 1em;
+  position: relative;
+  width: calc(25% - 1em);
+  border-radius: 12px;
+  box-sizing: border-box;
+  font-variation-settings: "wght" 600;
+}
