--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -11,7 +11,9 @@
   font-style: normal;
 }
 * {
-  font-family: "helveticaneue";
+  font-family: "helveticaneue";  
+  /* font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
+
   margin: 0%;
   padding: 0%;
   box-sizing: border-box;
