--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -10,19 +10,19 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@font-face {
+  font-family: "rockwen";
+  src: local("rockwen"), url(../fonts/HelveticaNeueW0187HvCnObl/rockwen.ttf) format("truetype");
+}
+
 * {
-  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  margin: 0%;
-  padding: 0%;
+  font-family:"rockwen";
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
-html,
-body {
-  background-color: #fbfbfb;
-  width: 100%;
-  height: 100%;
-}
 #main {
   width: 100%;
   height: 100%;
@@ -69,20 +69,25 @@ body {
   border-radius: 5px;
 }
 .form-box {
-  max-width: 380px;
+  max-width: 460px;
   margin: auto;
-  padding: 50px;
+  padding: 60px;
   background: transparent;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  border-radius: 10px;
+  box-shadow: 0px 3px 18px #0000001A;
+  border-radius: 20px;
 }
 .form-box1 {
-  max-width: 700px;
+  width: 800px;
   margin: auto;
-  padding: 50px;
+  padding: 60px;
   background: transparent;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  border-radius: 10px;
+  box-shadow: 0px 3px 18px #0000001A;
+  border-radius: 20px;
+}
+.form-box1 input,.form-box input{
+  padding: 12px;
+  border: 2px solid #e8e7e7;
+  border-radius: 20px !important;
 }
 .msg-box {
   max-width: 600px;
