modified:   src/App.js 	modified:   src/assets/css/style.css 	deleted:    src/assets/js/script.js 	modified:   src/components/LoginHome.js

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -45,6 +45,9 @@ body {
 .bg-blue {
   background-color: var(--blue);
 }
+.signuplink{
+  text-decoration: none;
+}
 .letter-spacing {
   letter-spacing: 10px;
 }
