modified:   src/assets/css/style.css 	modified:   src/components/Navs/NavBar.js

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -45,6 +45,9 @@ body {
 .bg-blue {
   background-color: var(--blue);
 }
+.pointer{
+  cursor: pointer;;
+}
 .signuplink{
   text-decoration: none;
 }
