--- a/src/components/LoginPages/Login.css
+++ b/src/components/LoginPages/Login.css
@@ -7,6 +7,7 @@
   background-color: #fff;
 }
 .login-container2 {
+  margin-top: 1.5em;
   width: 100vw;
   height: 90vh;
   display: flex;
@@ -29,7 +30,7 @@ border-radius: 20px;
 }
 
 .logo-container{
-  margin: 160px;
+  margin: 100px;
   width: 40vw;
 }
 select {
