modified:   package-lock.json 	modified:   package.json 	modified:   src/assets/css/style.css 	modified:   src/components/Manager/Home.js 	modified:   src/components/Manager/HomeBlock.js 	modified:   src/components/Manager/HomeList.js 	new file:   src/components/Manager/NewTask.js 	new file:   src/components/Manager/TaskHistory.js 	deleted:    structure.json

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -201,3 +201,12 @@ body {
   color: #000000;
   height: 60px;
 }
+
+.deadline input[type="date"]::before {
+  content: attr(placeHolder);
+  width: 100%;
+}
+.deadline input[type="time"]::before {
+  content: attr(placeHolder);
+  width: 100%;
+}
