--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -24,7 +24,11 @@ body {
 }
 .home-container {
   overflow: hidden;
+  height: 80vh !important;
   background-color: #fff !important;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .home-container h6 {
   font-size: 23px;
@@ -196,7 +200,7 @@ body {
   background: #ffffff 0% 0% no-repeat padding-box;
   box-shadow: 0px 3px 18px #0000001a;
   border-radius: 20px;
-  width: 553px;
+  width: 403px;
   font-size: 21px;
   color: #000000;
   height: 60px;
