--- a/src/components/LoginPages/Login.css
+++ b/src/components/LoginPages/Login.css
@@ -30,7 +30,7 @@ border-radius: 20px;
 
 .logo-container{
   margin: 160px;
-  width: 650px;
+  width: 40vw;
 }
 select {
   background: #ffffff 0% 0% no-repeat padding-box;
@@ -49,7 +49,7 @@ select {
 }
 .form-box {
   width: 423px;
-  /* margin: auto; */
+  margin: auto;
   padding: 50px;
   background: #FFFFFF 0% 0% no-repeat padding-box;
 box-shadow: 0px 3px 18px #0000001A;
