--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -262,6 +262,16 @@ padding-left: 5px;
 font-size: 12px;
 padding-top: 2px;
 }
+.add-new-company-input{
+padding: 10px;}
+.add-new-company-input input{
+  background: #FFFFFF 0% 0% no-repeat padding-box;
+border: 1px solid #707070 !important;
+border-radius: 31px;
+width: 100%;
+outline: none;
+padding: 8px;
+}
 .add-new-input{
 padding: 10px;
 }
