--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -241,7 +241,31 @@ border: 0;
 max-height: 400px;
 overflow-y: auto;
 }
-
+.company-dropdown{
+  background: #FFFFFF 0% 0% no-repeat padding-box !important;
+box-shadow: 0px 3px 18px #0000001A !important;
+border-radius: 20px !important;
+color: #000000 !important;
+border: 0 !important;
+text-align: left !important;
+padding: 10px !important;
+padding-left: 20px !important;
+}
+.company-dropdown::after{
+float: right !important;
+font-size: 20px;
+margin: 10px;
+}
+.company-dropdown-menu{
+  width: 300px;
+  padding: 10px;
+  background: #FFFFFF 0% 0% no-repeat padding-box;
+box-shadow: 0px 3px 18px #0000001A;
+border-radius: 20px;
+border: 0;
+max-height: 300px;
+overflow-y: auto;
+}
 .add-new-input-textbox::-webkit-input-placeholder { 
 font-family: FontAwesome;
 padding-left: 5px;
