--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -238,9 +238,27 @@ margin: 10px;
 box-shadow: 0px 3px 18px #0000001A;
 border-radius: 20px;
 border: 0;
-max-height: 400px;
-overflow-y: auto;
+max-height: 250px;
+overflow-y: none;
 }
+.client-dropdown-menu-list{
+overflow-y: auto;
+font-size: 20px;
+overflow-x: hidden;
+}
+.client-dropdown-menu-height {
+max-height: 150px;
+}
+.client-dropdown-menu ::-webkit-scrollbar-thumb {
+  height: 50px !important;
+  background: #fff;
+  border: 2px solid var(--blue);
+}
+.client-dropdown-menu ::-webkit-scrollbar {
+  width: 8px;
+}
+
+
 .company-dropdown{
   background: #FFFFFF 0% 0% no-repeat padding-box !important;
 box-shadow: 0px 3px 18px #0000001A !important;
@@ -275,11 +293,9 @@ overflow-x: hidden;
   background: #fff;
   border: 2px solid var(--blue);
 }
-
 .company-dropdown-menu ::-webkit-scrollbar {
   width: 8px;
 }
-
 .company-dropdown-menu-height {
 max-height: 100px;
 }
