modified:   src/assets/css/style.css 	modified:   src/components/LoginPages/SignUp.js

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -155,10 +155,10 @@ border-radius: 6px !important;
   background: #fff;
   border: 2px solid var(--blue);
 }
-
 .curve-box-homelist ::-webkit-scrollbar {
   width: 8px;
 }
+
 .task-box {
   background-color: white;
   max-width: 450px;
@@ -259,13 +259,31 @@ margin: 10px;
 .company-dropdown-menu{
   width: 300px;
   padding: 10px;
+max-height: 250px;
   background: #FFFFFF 0% 0% no-repeat padding-box;
 box-shadow: 0px 3px 18px #0000001A;
 border-radius: 20px;
 border: 0;
-max-height: 300px;
-overflow-y: auto;
+overflow-y: none;
 }
+.company-dropdown-menu-list{
+overflow-y: auto;
+overflow-x: hidden;
+}
+.company-dropdown-menu ::-webkit-scrollbar-thumb {
+  height: 50px !important;
+  background: #fff;
+  border: 2px solid var(--blue);
+}
+
+.company-dropdown-menu ::-webkit-scrollbar {
+  width: 8px;
+}
+
+.company-dropdown-menu-height {
+max-height: 100px;
+}
+
 .add-new-input-textbox::-webkit-input-placeholder { 
 font-family: FontAwesome;
 padding-left: 5px;
