--- a/src/components/LoginPages/Login.css
+++ b/src/components/LoginPages/Login.css
@@ -81,3 +81,28 @@ margin-top: 10px;
   opacity: .4;
   border-color: #CDCDCD !important;
 }
+.password-div input::placeholder{
+  opacity: .4;
+  border-color: #CDCDCD !important;
+}
+.signup-h6{
+  text-align: center;
+  font-size: 18px !important;
+}
+.password-div{
+  display: flex;
+  width: 100%;
+  border: 2px solid #e1e0e0;
+border-radius: 15px;
+align-items: center;
+}
+.password-div input{
+  width: 120% !important;
+  border: 0;
+  background: transparent;
+  outline: none;
+}
+.password-div input:focus{
+  border-color: #e1e0e0 !important;
+  box-shadow: #e1e0e0 !important;
+}
