--- a/src/components/LoginPages/Login.css
+++ b/src/components/LoginPages/Login.css
@@ -9,7 +9,7 @@
 .login-container2 {
   margin-top: 1.5em;
   width: 100vw;
-  height: auto;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
