--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -390,3 +390,14 @@ z-index: 11212;
   text-align: left;
   padding:10px;
 }
+.notification-dot {
+  height: 10px;
+  width: 10px;
+  background-color: #ff0000;
+  border-radius: 50%;
+  border: 1px solid white;
+  display: inline-block;
+  position: relative;
+  top: -6px;
+  left: -10px;
+}
