--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -402,3 +402,19 @@ z-index: 11212;
   top: -6px;
   left: -10px;
 }
+.marquee {
+    width: 150px;
+	  line-height: 0px;
+    white-space: nowrap;
+    overflow: hidden;
+    box-sizing: border-box;
+}
+.marquee h5 {
+    display: inline-block;
+    padding-left: 100%;
+    animation: marquee 8s linear infinite;
+}
+@keyframes marquee {
+    0%   { transform: translate(0, 0); }
+    100% { transform: translate(-100%, 0); }
+}
