--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -185,8 +185,8 @@ border-radius: 6px !important;
   padding: 20px;
 }
 .cards hr.divider {
-  margin-top: 0.5em;
-  margin-bottom: 0.5em;
+  margin-top: .5em;
+  margin-bottom: -1em;
 }
 .task-status {
   float: right;
