--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -132,12 +132,21 @@ border-radius: 10px !important;
   background: #fff;
   border: 2px solid var(--blue);
 }
+
+.overflow-set-auto::-webkit-scrollbar-track {
+width:3px;
+background:rgba(0, 0, 0, 0.085);
+border: 3.5px solid white;
+margin-top: 1em;
+margin-bottom: 1em;
+}
 .overflow-set-auto {
   overflow-y: auto;
+  padding-right: 30px;
   overflow-x: hidden;
 }
 .overflow-set-auto::-webkit-scrollbar {
-  height: 10px !important;
+  left: 10px;
   width: 5px;
 }
 .task-box ::-webkit-scrollbar-thumb {
@@ -147,6 +156,20 @@ border-radius: 10px !important;
 }
 .task-box ::-webkit-scrollbar {
   width: 8px;
+}
+.task-box::-webkit-scrollbar-track {
+width:3px;
+background:rgba(0, 0, 0, 0.085);
+border: 3.5px solid white;
+margin-top: 1em;
+margin-bottom: 1em;
+}
+.curve-box-homelist::-webkit-scrollbar-track {
+width:3px;
+background:rgba(0, 0, 0, 0.085);
+border: 3.5px solid white;
+margin-top: 1em;
+margin-bottom: 1em;
 }
 .curve-box-homelist ::-webkit-scrollbar-thumb {
   height: 0px !important;
@@ -256,6 +279,13 @@ max-height: 150px;
   width: 8px;
 }
 
+.client-dropdown-menu::-webkit-scrollbar-track {
+width:3px;
+background:rgba(0, 0, 0, 0.085);
+border: 3.5px solid white;
+margin-top: 1em;
+margin-bottom: 1em;
+}
 
 .company-dropdown{
   background: #FFFFFF 0% 0% no-repeat padding-box !important;
