--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -443,25 +443,28 @@ z-index: 11212;
     0%   { transform: translate(0, 0); }
     100% { transform: translate(-100%, 0); }
 }
-.bg-blue{
-  position: relative;
-  color:#fff !important;
-  background: blue !important;
+/* Inactive tab */
+.tabclass ul > li > a {
+  background-color: #f1f4fb;
+    color: #909aaf;
+  content:"";
+	position: absolute;
+	top: 0; right: 0; bottom: 0; left: 0;
+  margin-left:5px;
+  margin-right:5px;
+	z-index: 1;
+	transform: scale(1.1, 1.3) perspective(.5em) rotateX(6deg);
+	transform-origin: bottom;  
 }
-.bg-normal{
-  color: #000000 !important;
-  background-color: #fff !important;
+.tabclass ul > li > a:hover {
+  background-color: #f1f4fb;
+    color: #909aaf;
 }
-.bg-blue::before{
-  background-color: blue !important;
-  color: #fff !important;
-    content: "";
-  position: absolute;
-  display: block;
-  top: 0;
-  height: 100%;
-  width: 100%;
-  left: 0px;
-  transform: skewX(-8deg);
- z-index: -11;
+
+/* Active tab */
+.tabclass ul > li.active > a,
+.tabclass ul > li.active > a:hover,
+.tabclass ul > li.active > a:focus {
+  color: #fff;
+	background-color: #3975e9;
 }
