--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -444,7 +444,7 @@ z-index: 11212;
     100% { transform: translate(-100%, 0); }
 }
 /* Inactive tab */
-.tabclass ul > li > a {
+.tabclass ul  li  a {
   background-color: #f1f4fb;
     color: #909aaf;
   content:"";
@@ -456,15 +456,15 @@ z-index: 11212;
 	transform: scale(1.1, 1.3) perspective(.5em) rotateX(6deg);
 	transform-origin: bottom;  
 }
-.tabclass ul > li > a:hover {
+.tabclass ul  li  a:hover {
   background-color: #f1f4fb;
     color: #909aaf;
 }
 
 /* Active tab */
-.tabclass ul > li.active > a,
-.tabclass ul > li.active > a:hover,
-.tabclass ul > li.active > a:focus {
+.tabclass ul  li.active  a,
+.tabclass ul li.active  a:hover,
+.tabclass ul  li.active  a:focus {
   color: #fff;
 	background-color: #3975e9;
 }
