--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -123,7 +123,7 @@ width: 100%;
   max-height: 40vh;
 }
 .table-height1 {
-  max-height: 55vh;
+  max-height: 65vh;
 }
 .table-height2 {
   max-height: 70vh;
@@ -143,11 +143,10 @@ margin-bottom: 1em;
 }
 .overflow-set-auto {
   overflow-y: auto;
-  padding-right: 30px;
+  padding-right: 10px;
   overflow-x: hidden;
 }
 .overflow-set-auto::-webkit-scrollbar {
-  left: 10px;
   width: 5px;
 }
 .task-box ::-webkit-scrollbar-thumb {
@@ -240,7 +239,7 @@ margin-bottom: 1em;
 }
 .client-dropdown{
   background: #FFFFFF 0% 0% no-repeat padding-box !important;
-box-shadow: 0px 3px 18px #0000001A !important;
+box-shadow: 0px 1px 18px #0000001A !important;
 border-radius: 20px !important;
 color: #000000 !important;
 border: 0 !important;
@@ -438,7 +437,11 @@ z-index: 11212;
     padding-left: 100%;
     animation: marquee 8s linear infinite;
 }
-
+.marquee h6 {
+    display: inline-block;
+    padding-left: 100%;
+    animation: marquee 8s linear infinite;
+}
 @keyframes marquee {
     0%   { transform: translate(0, 0); }
     100% { transform: translate(-100%, 0); }
