--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -473,8 +473,16 @@ z-index: 11212;
 	background-color: #3975e9;
 }
 
-.ab.arrow::after{
- transform: rotate(45deg);
+.ab::after{
+  content: "";
+	width: 0;
+	height: 0;
+  position: absolute;
+  top: 0px;
+  left: 10.8rem;
+	border-top: 20px solid transparent;
+	border-left: 20px solid #3975e9;
+	border-bottom: 20px solid transparent;
 }
 
 
