--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -417,14 +417,15 @@ z-index: 11212;
 }
 .notification-dot {
   height: 10px;
-  width: 10px;
+  width:10px;
+  margin-right: -10px;
   background-color: #ff0000;
   border-radius: 50%;
-  border: 1px solid white;
-  display: inline-block;
+  border: 1px solid #ff0000;
+  display:inline-block;
   position: relative;
-  top: -6px;
-  left: -10px;
+  top:-5px;
+  left:-10px;
 }
 .marquee {
     width: 150px;
